Feat: button styling on hover, selection, unified across all instances

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1055,6 +1055,10 @@ body {
   height: 1px;
 }
 
+.h-\[472px\] {
+  height: 472px;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1065,10 +1069,6 @@ body {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[472px\] {
-  height: 472px;
 }
 
 .max-h-\[300px\] {
@@ -1131,6 +1131,10 @@ body {
   width: 1px;
 }
 
+.w-\[972px\] {
+  width: 972px;
+}
+
 .w-\[var\(--radix-popover-trigger-width\)\] {
   width: var(--radix-popover-trigger-width);
 }
@@ -1145,14 +1149,6 @@ body {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[876px\] {
-  width: 876px;
-}
-
-.w-\[972px\] {
-  width: 972px;
 }
 
 .min-w-10 {
@@ -1228,14 +1224,6 @@ body {
           user-select: none;
 }
 
-.grid-cols-\[324px_1fr\] {
-  grid-template-columns: 324px 1fr;
-}
-
-.grid-cols-\[272px_1fr\] {
-  grid-template-columns: 272px 1fr;
-}
-
 .grid-cols-\[312px_1fr\] {
   grid-template-columns: 312px 1fr;
 }
@@ -1276,6 +1264,10 @@ body {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1286,10 +1278,6 @@ body {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1376,6 +1364,10 @@ body {
   border-radius: 0.75rem;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-l-full {
   border-top-left-radius: 9999px;
   border-bottom-left-radius: 9999px;
@@ -1406,24 +1398,16 @@ body {
   border-left-width: 1px;
 }
 
+.border-l-2 {
+  border-left-width: 2px;
+}
+
 .border-r {
   border-right-width: 1px;
 }
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-l-4 {
-  border-left-width: 4px;
-}
-
-.border-l-8 {
-  border-left-width: 8px;
-}
-
-.border-l-2 {
-  border-left-width: 2px;
 }
 
 .border-input {
@@ -1444,28 +1428,6 @@ body {
 
 .border-t-transparent {
   border-top-color: transparent;
-}
-
-.border-l-background {
-  border-left-color: hsl(var(--background));
-}
-
-.border-l-zinc-950 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(9 9 11 / var(--tw-border-opacity, 1));
-}
-
-.border-l-black {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
-.border-opacity-5 {
-  --tw-border-opacity: 0.05;
-}
-
-.border-opacity-10 {
-  --tw-border-opacity: 0.1;
 }
 
 .bg-accent {
@@ -1520,29 +1482,17 @@ body {
   background-color: transparent;
 }
 
-.bg-zinc-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+.bg-muted-foreground {
+  background-color: hsl(var(--muted-foreground));
 }
 
-.bg-zinc-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
+.bg-primary-foreground {
+  background-color: hsl(var(--primary-foreground));
 }
 
 .bg-rose-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 113 133 / var(--tw-bg-opacity, 1));
-}
-
-.bg-zinc-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(9 9 11 / var(--tw-bg-opacity, 1));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .p-0 {
@@ -1691,19 +1641,14 @@ body {
   line-height: 1.25rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-medium {
@@ -1716,10 +1661,6 @@ body {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .italic {
@@ -1774,15 +1715,6 @@ body {
   color: hsl(var(--secondary-foreground));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-muted {
-  color: hsl(var(--muted));
-}
-
 .underline-offset-4 {
   text-underline-offset: 4px;
 }
@@ -1796,20 +1728,16 @@ body {
   opacity: 0;
 }
 
+.opacity-5 {
+  opacity: 0.05;
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.opacity-10 {
-  opacity: 0.1;
-}
-
-.opacity-5 {
-  opacity: 0.05;
 }
 
 .shadow {
@@ -1867,6 +1795,12 @@ body {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-colors {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1875,12 +1809,6 @@ body {
 
 .transition-opacity {
   transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-all {
-  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1992,11 +1920,6 @@ body {
   z-index: 20;
 }
 
-.hover\:translate-x-2:hover {
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:bg-accent:hover {
   background-color: hsl(var(--accent));
 }
@@ -2023,16 +1946,6 @@ body {
 
 .hover\:bg-transparent:hover {
   background-color: transparent;
-}
-
-.hover\:bg-zinc-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-zinc-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-muted-foreground:hover {
@@ -2384,11 +2297,6 @@ body {
   .xl\:w-\[260px\] {
     width: 260px;
   }
-}
-
-.dark\:bg-zinc-950:where(class, class *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(9 9 11 / var(--tw-bg-opacity, 1));
 }
 
 .\[\&\:has\(\>\.day-range-end\)\]\:rounded-r-md:has(>.day-range-end) {
