--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -959,6 +959,14 @@ body {
   top: 50%;
 }
 
+.top-6 {
+  top: 1.5rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1056,8 +1064,8 @@ body {
   height: 100vh;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-24 {
+  height: 6rem;
 }
 
 .max-h-\[300px\] {
@@ -1140,8 +1148,8 @@ body {
   width: 100vw;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-24 {
+  width: 6rem;
 }
 
 .min-w-10 {
@@ -1253,6 +1261,10 @@ body {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1263,10 +1275,6 @@ body {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1479,6 +1487,21 @@ body {
   background-color: transparent;
 }
 
+.bg-rose-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 113 133 / var(--tw-bg-opacity, 1));
+}
+
+.bg-rose-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 228 230 / var(--tw-bg-opacity, 1));
+}
+
+.bg-rose-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(159 18 57 / var(--tw-bg-opacity, 1));
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -1635,6 +1658,10 @@ body {
   line-height: 1rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -1645,10 +1672,6 @@ body {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .italic {
@@ -1701,10 +1724,6 @@ body {
 
 .text-secondary-foreground {
   color: hsl(var(--secondary-foreground));
-}
-
-.text-muted {
-  color: hsl(var(--muted));
 }
 
 .underline-offset-4 {
