--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -777,6 +777,27 @@ select {
   z-index: -1;
 }
 
+.canvasContainer {
+  z-index: 1;
+}
+
+.canvasContainer::before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 12px;
+  right: 12px;
+  border: solid 1px #f97316;
+  border-radius: 0.5rem;
+  background-image: repeating-linear-gradient(-45deg,
+        transparent,
+        #f97316 0.5px,
+        transparent 2px,
+        transparent 6px);
+  z-index: -2;
+}
+
 /* React-colorful overrides ----------------------------*/
 
 .custom-color-picker .react-colorful {
@@ -911,6 +932,10 @@ body {
   bottom: 0px;
 }
 
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
 .bottom-6 {
   bottom: 1.5rem;
 }
@@ -963,12 +988,8 @@ body {
   top: 50%;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
+.isolate {
+  isolation: isolate;
 }
 
 .z-50 {
@@ -1056,10 +1077,6 @@ body {
   height: 1px;
 }
 
-.h-\[472px\] {
-  height: 472px;
-}
-
 .h-full {
   height: 100%;
 }
@@ -1130,10 +1147,6 @@ body {
 
 .w-\[1px\] {
   width: 1px;
-}
-
-.w-\[972px\] {
-  width: 972px;
 }
 
 .w-\[var\(--radix-popover-trigger-width\)\] {
