--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -777,27 +777,6 @@ select {
   z-index: -1;
 }
 
-.canvasContainer {
-  z-index: 1;
-}
-
-.canvasContainer::before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 12px;
-  right: 12px;
-  border: solid 1px #f97316;
-  border-radius: 0.5rem;
-  background-image: repeating-linear-gradient(-45deg,
-        transparent,
-        #f97316 0.5px,
-        transparent 2px,
-        transparent 6px);
-  z-index: -2;
-}
-
 /* React-colorful overrides ----------------------------*/
 
 .custom-color-picker .react-colorful {
@@ -986,10 +965,6 @@ body {
 
 .top-\[50\%\] {
   top: 50%;
-}
-
-.isolate {
-  isolation: isolate;
 }
 
 .z-50 {
@@ -1212,6 +1187,16 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-\[\$\{position\.x\}px\] {
+  --tw-translate-x: ${position.x}px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[\$\{position\.y\}px\] {
+  --tw-translate-y: ${position.y}px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1226,6 +1211,10 @@ body {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-grabbing {
+  cursor: grabbing;
 }
 
 .touch-none {
