Testing: adding a simple component to connect to a local server

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -971,6 +971,10 @@ body {
   top: 50%;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1255,6 +1259,10 @@ body {
 
 .flex-col-reverse {
   flex-direction: column-reverse;
+}
+
+.place-content-center {
+  place-content: center;
 }
 
 .items-center {
@@ -1895,6 +1903,10 @@ body {
 
 .ease-in-out {
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.running {
+  animation-play-state: running;
 }
 
 .file\:border-0::file-selector-button {
