--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1245,6 +1245,10 @@ body {
   grid-template-columns: 312px 1fr;
 }
 
+.grid-cols-\[324px_1fr\] {
+  grid-template-columns: 324px 1fr;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1600,6 +1604,10 @@ body {
   padding-bottom: 1.5rem;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
 .pl-0 {
   padding-left: 0px;
 }
@@ -1630,6 +1638,30 @@ body {
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .text-center {
